--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "vue-cli-service serve --mode development"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.7",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
@@ -19,6 +20,7 @@
     "vue-i18n": "^8.22.4",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
+    "vue-styled-components": "^1.6.0",
     "vue-tsx-support": "^3.1.0",
     "vuetify": "^2.4.4",
     "vuetify-tsx": "^0.26.3"
